--- a/WWW1-23_24/S1/tabulky_css.html
+++ b/WWW1-23_24/S1/tabulky_css.html
@@ -12,6 +12,7 @@
             width: 50vw;
             height: 500px;
             empty-cells: hide; /*skrytí prázdných buněk - hide, show*/
+            border-collapse: collapse; /*collapse, separate - spojuje/odděluje rámečky buněk*/
         }
         td{
             border: 1px solid red;
