--- a/WWW1-23_24/S1/tabulky_html.html
+++ b/WWW1-23_24/S1/tabulky_html.html
@@ -11,7 +11,7 @@
         Příkazy pro tabulky:
             table - deklaruje oblast tabulky
 
-            tr - dekalruje oblast řádku tabulky (nadřazeno td nebo th)
+            tr - deklaruje oblast řádku tabulky (nadřazeno td nebo th)
 
             td - rozděluje řádek na sloupce
 
@@ -19,9 +19,9 @@
 
             caption - popis tabulky (dává před nebo za tabulku)
 
-            rowspan - spojuje řádky - vyžaduje další řádek pod, aby mohl vytvořit spojení
+            "rowspan" - spojuje řádky - vyžaduje další řádek pod, aby mohl vytvořit spojení
 
-            colspan - píše se k th, td => spojuje buňky ve sloupci; udává se v číselné hodnotě
+            "colspan" - píše se k th, td => spojuje buňky ve sloupci; udává se v číselné hodnotě
 
             "border" - zastaralý příkaz, nyní v CSS; nastavuje ohraničení vnitřku tabulky
     -->
